--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -205,6 +205,7 @@
     <string name="dlg_body_promote">Are you sure you want to promote this standard user to administrator?</string>
     <string name="dlg_body_demote">Are you sure you want to demote this administrator to standard user?</string>
     <string name="dlg_body_disable">Are you sure you want to disable this account?</string>
+    <string name="dlg_body_change_wallpaper">Are you sure you want to change your wallet\s background image?</string>
 
     <string name="dlg_title_otp">Account verification</string>
     <string name="dlg_body_otp">As part of our verification process, please enter the One-Time Pin (OTP) that has been sent to your phone number.</string>
